tests/pass/run/foundation_filesystem_compile/app/main.kira
import Foundation

@Main
@Native
function main() {
    let file = openFile("app/sample.txt")
    let contents = file.readAll()
    let text: String = contents.text
    file.close()

    if contents.ok {
        print(text)
        return
    }
    return
}
