tests/fail/semantics/ownership_missing_move_named_nontrivial/main.kira
struct Mesh {
    let id: Int
}

function consume(mesh: Mesh) {
    return
}

@Main
function main() {
    var mesh = Mesh { id: 1 }
    consume(mesh)
    return
}
